--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta name="description" content="The Example Clinic demo showcases the integration of multiple Essential JS 2 ASP Core UI components within a real-world application.">
     <title>Appointment Planner - Syncfusion Aspcore Components Showcase App</title>
     <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
-    <link rel="stylesheet" href="AppointmentPlanner.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="AppointmentPlanner_NET8.styles.css" asp-append-version="true" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Cabin" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-signals/1.0.0/js-signals.min.js"></script>
